# fableforge-cli

./: README.md  pyproject.toml
.github/workflows/: release.yml
src/fableforge/: __init__.py  cli.py
